<resources>
    <!--  Activity Titles  -->
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="register_patient_title">Register as a Patient</string>
    <string name="register_doctor_title">Register as a Doctor</string>

    <!--  Main Activity  -->
    <string name="app_name">Medica</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>

    <!--  Login Page Activity  -->
    <string name="username_field">Username</string>
    <string name="password_field">Password</string>
    <string name="login_username_hint">Enter your username</string>
    <string name="login_password_hint">Enter your password</string>

    <!--  Register Activity  -->
    <string name="register_question">Are you a patient or doctor?</string>
    <string name="register_doctor">Doctor</string>
    <string name="register_patient">Patient</string>

    <string-array name="SelectGender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="FilterGender">
        <item>Any Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!--  Doctor Register Activity  -->
    <string-array name="SelectSpecialist">
        <item>Anatomical Pathology</item>
        <item>Anesthesiology</item>
        <item>Cardiology</item>
        <item>Cardiovascular/Thoracic Surgery</item>
        <item>Clinical Immunology/Allergy</item>
        <item>Critical Care Medicine</item>
        <item>Dermatology</item>
        <item>Diagnostic Radiology</item>
        <item>Emergency Medicine</item>
        <item>Endocrinology and Metabolism</item>
    </string-array>
    <string name="register_specialization">Specialization:</string>
    <string name="register_specialization_select">Select Specialist</string>

    <!--  Patient Register Activity  -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="register_button">REGISTER</string>
    <string name="patient_birthday">Your Birthday</string>
    <string name="select_birthday">SELECT BIRTHDATE</string>

    <!-- BOOK YOUR APPOINTMENT STRINGS -->
    <string name="BYA_title">Book Your Appointment</string>
    <string name="BYA_doctorList">List of Doctors</string>
    <string name="BYA_filterBy">Filter by:</string>
    <string name="BYA_filterText">FILTER</string>
    <string name="BYA_bookText">BOOK</string>
    <string name="BYA_filterByTitle">Filter Doctor By</string>
    <string name="BYA_filterOptionsNone">None</string>
    <string name="specialization">Specialization</string>
    <string name="filter_specialist_button">Filter Specialist</string>

    <!-- SELECT APPOINTMENT TIMES STRINGS -->
    <string name="SAT_title">Availability Times</string>
    <string name="SAT_book_button">BOOK</string>
    <string name="title_activity_doctor_after_login">Doctor_After_Login_Activity</string>-
    <string name="none">None</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- UPCOMING ACTIVITIES -->
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="view_your_appointments">View Your Appointments</string>
    <string name="previous_appointments">Previous Appointments</string>
    <string name="view_previous_appointments">View Previous Appointments</string>
    <string name="view_available_time_slots">View Your Available Time Slots</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- View Appointment Details -->
    <string name="appointment_details">Appointment Details</string>
    <string name="appointment_time">Date/time:</string>
    <string name="appointment_id">Appointment ID:</string>
    <string name="doctor_name">Doctor Name:</string>
    <string name="patient_name">Patient Name:</string>
    <string name="patient_details">Patient Details</string>
    <string name="patient_previous_doctors">Patient Previous Doctors</string>

    <!--  User Home Activity  -->
    <string name="user_home_welcome1">Hello</string>
    <string name="user_home_welcome2">What would you like to do today?</string>
    <string name="user_home_book_appt">Book a new appointment</string>
    <string name="user_home_schedule">View schedule</string>
    <string name="user_home_view_prev_appt">View previous appointments</string>
    <string name="user_home_view_upcomming_appt">View upcoming appointments</string>

    <string name="book_appointment">Book Appointment</string>
    <string name="name">Name</string>

    <!--  Profile  -->
    <string name="empty">N/A</string>
    <string name="profile_name">Name:</string>
    <string name="profile_username">Username:</string>
    <string name="profile_gender">Gender:</string>
    <string name="profile_birthday">Birthday:</string>
    <string name="profile_specializations">Specializations:</string>
</resources>
