<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DoctorViewAppointmentDetailsActivity">

    <TextView
        android:id="@+id/Doctor_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/doctor_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Appointment_ID"
        tools:text="@string/doctor_name" />

    <TextView
        android:id="@+id/Patient_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/patient_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Doctor_Name"
        tools:text="@string/patient_name" />

    <TextView
        android:id="@+id/View_Appointment_Details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/appointment_details"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Appointment_Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/appointment_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/View_Appointment_Details" />

    <TextView
        android:id="@+id/Appointment_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/appointment_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Appointment_Time"
        tools:text="@string/appointment_id" />

    <TextView
        android:id="@+id/Appointment_Time_Box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="Tue Aug 7, 2021 4:30 pm"
        app:layout_constraintBaseline_toBaselineOf="@+id/Appointment_Time"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Appointment_ID_Box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="256370876"
        app:layout_constraintBaseline_toBaselineOf="@+id/Appointment_ID"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Doctor_Name_Box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="Doctor"
        app:layout_constraintBaseline_toBaselineOf="@+id/Doctor_Name"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Patient_Name_Box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="Patient"
        app:layout_constraintBaseline_toBaselineOf="@+id/Patient_Name"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Patient_Details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/patient_details"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Patient_Name"
        tools:text="@string/patient_details" />

    <TextView
        android:id="@+id/Patient_Gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Patient_Details" />

    <TextView
        android:id="@+id/Patient_Birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/date_of_birth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Patient_Gender" />

    <TextView
        android:id="@+id/Patient_Gender_Box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="Male"
        app:layout_constraintBaseline_toBaselineOf="@+id/Patient_Gender"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Patient_Previous_Doctors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/patient_previous_doctors"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Patient_Birthday" />

    <TextView
        android:id="@+id/Patient_Birthday_Box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="Aug 4, 2021"
        app:layout_constraintBaseline_toBaselineOf="@+id/Patient_Birthday"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/List_Previous_Doctors"
        android:layout_width="354dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Patient_Previous_Doctors" />

</androidx.constraintlayout.widget.ConstraintLayout>